Add Java-11 : JEP 330: Launch Single-File Source-Code Programs